[tool.poetry]
name = "code-qa"
version = "0.2.0"
description = ""
authors = ["Steven Mi <steven.mi@getyourguide.com>"]
readme = "README.md"
packages = [{include = "code_qa"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = "^0.0.187"
fire = "^0.5.0"
openai = "^0.27.7"
chromadb = "^0.3.25"
tiktoken = "^0.4.0"
pathspec = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
code_qa = "code_qa.cli:main"